@startuml

'====== ENTITIES ======
entity roles {
  *role_id : varchar(10)
  role_name : varchar(50)
}

entity users {
  *user_id : varchar(10)
  name : varchar(100)
  email : varchar(100)
  password : varchar(255)
  blood_type : varchar(3)
  role_id : varchar(10)
  last_donation_date : date
  location : point
  status : enum
  created_at : datetime
  phone : varchar(15)
  gender : varchar(5)
  address : text
}

entity blood_types {
  *blood_type : varchar(3)
  can_donate_to : text
  can_receive_from : text
}

entity health_centers {
  *center_id : varchar(10)
  name : varchar(100)
  address : varchar(255)
  contact_info : varchar(100)
  location : point
}

entity donation_requests {
  *request_id : varchar(32)
  user_id : varchar(10)
  center_id : varchar(10)
  blood_type_needed : varchar(3)
  quantity : int
  urgency_level : enum
  status : enum
  created_at : datetime
  desired_date : datetime
  request_type : enum
}

entity donations {
  *donation_id : varchar(100)
  user_id : varchar(10)
  request_id : varchar(32)
  donation_type : enum
  amount : int
  date : date
  status : varchar(255)
}

entity blood_inventory {
  *inventory_id : bigint
  center_id : varchar(10)
  blood_type : varchar(3)
  component_type : enum
  quantity : int
  expiry_date : date
  status : enum
  donation_id : varchar(10)
}

entity appointments {
  *appointment_id : varchar(10)
  user_id : varchar(10)
  center_id : varchar(10)
  scheduled_time : datetime
  status : enum
  donation_id : varchar(10)
}

entity activity_logs {
  *log_id : varchar(10)
  user_id : varchar(10)
  action : varchar(255)
  ip_address : varchar(45)
  timestamp : datetime
}

entity blogs {
  *blog_id : varchar(10)
  author_id : varchar(10)
  title : varchar(255)
  content : text
  created_at : datetime
}

entity medical_records {
  *record_id : varchar(100)
  user_id : varchar(10)
  weight : float
  blood_pressure : varchar(20)
  disease_history : text
  checked_date : date
  notes : text
}

entity notifications {
  *notification_id : varchar(10)
  user_id : varchar(10)
  message : text
  message_type : enum
  staff_message : text
  status : enum
  created_at : datetime
}

entity donation_registrations {
  *id : varchar(100)
  user_id : varchar(10)
  registration_date : date
  type : enum
  status : enum
}

users -- roles : role_id
donation_requests -- users : user_id
donation_requests -- health_centers : center_id
donations -- users : user_id
donations -- donation_requests : request_id
blood_inventory -- health_centers : center_id
blood_inventory -- blood_types : blood_type
blood_inventory -- donations : donation_id
appointments -- users : user_id
appointments -- health_centers : center_id
appointments -- donations : donation_id
activity_logs -- users : user_id
blogs -- users : author_id
medical_records -- users : user_id
notifications -- users : user_id
donation_registrations -- users : user_id

@enduml